removi os parâmetros de network, pois ambos os containers conseguem se comunicar pela a network default

--- a/db-mysql-docker-compose.yml
+++ b/db-mysql-docker-compose.yml
@@ -11,17 +11,8 @@ services:
         #nome do container
         container_name: db-mysql
         
-        #inserindo o container na rede itau, para comunicação com os outros containers dessa mesma rede
-        networks:
-            - case-itau
-        
+        #variáveis de ambiente para criação da base de dados, com o usuário root e sem a necessidade de informar a senha
         environment:
             - MYSQL_DATABASE=DB_HASHTAGS
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-
-#criando rede para a comunicação dos containers
-networks:
-    case-itau:        
-        #utilizando o driver default
-        driver: bridge
